--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "monime-package",
-	"version": "1.1.2-alpha.1",
+	"version": "1.1.2",
 	"description": "A focused TypeScript helper library for interacting with Monime's common endpoints. It provides small, typed helpers that handle request composition, headers, and basic response/error plumbing so your application code stays clean.",
 	"main": "./dist/index.js",
 	"module": "./dist/index.mjs",
@@ -33,7 +33,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Walon-Foundation/monime-package"
+		"url": "git+https://github.com/Walon-Foundation/monime-package.git"
 	},
 	"dependencies": {
 		"axios": "^1.12.2"
