--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"url": "git+https://github.com/Walon-Foundation/monime-package.git"
 	},
 	"dependencies": {
-		"axios": "^1.12.2"
+		"axios": "^1.12.2",
+		"zod": "^4.3.6"
 	}
 }
