--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"scripts": {
 		"test": "vitest",
 		"build": "tsup",
-		"lint-format": "biome check --write"
+		"lint-format": "biome check --write --unsafe"
 	},
 	"files": [
 		"dist",
